nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-nginx
  namespace: elysium
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: app-nginx
